# rsp_lsst_io

./: .gitignore  .phalanxenvs.json  .pre-commit-config.yaml  .prettierrc.toml  .vale.ini  AGENTS.md  Makefile  README.md  conf.py  documenteer.toml  pyproject.toml  rst_epilog.rst.jinja  rst_prolog.rst.jinja  tox.ini
.claude/: .gitignore
.claude/skills/env-specific-content/: SKILL.md
.claude/skills/new-page/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  periodic-ci.yaml
docs/: index.rst  roadmap.rst
docs/_static/: versions.json
docs/contributing/: building-the-docs.rst  env-specific-docs.rst  index.rst  style-guide.rst  vale.rst
docs/guides/: contributions.rst  hybrid.md  index.rst
docs/guides/account-resources/: index.rst  user-account-resources.primary.in.rst
docs/guides/api/: alerts.rst  api.primary.in.rst  api.webdav.in.rst  index.rst  sia.rst  tap.rst
docs/guides/auth/: creating-user-tokens.rst  groups.rst  index.rst  token-scopes.rst  using-topcat-outside-rsp.rst
docs/guides/getting-started/: first-steps-login.in.rst  get-an-account.rst  index.rst  linking-more-ids.rst  notebook-first-steps.rst  portal-first-steps.rst  user-step-by-step.primary.in.rst
docs/guides/inbox/: example.rst  hybrid.md  index.rst  markdown-example.md
docs/guides/life/: patch-thursday.rst  quotas.rst  updates.rst
docs/guides/log/: index.rst  log.primary.in.rst
docs/guides/notebooks/: index.rst  storage.rst
docs/guides/notebooks/configuration/: git-configuration.rst  groups.rst  index.rst  notebook-user-setups.rst  shell-configuration.rst  ui-configuration.rst  user-installs.rst
docs/guides/notebooks/faq/: index.rst
docs/guides/notebooks/jupyter-notebooks/: index.rst  tutorial-notebooks.rst
docs/guides/notebooks/jupyterlab-terminal/: index.rst
docs/guides/notebooks/lsst.rsp/: index.rst
docs/guides/notebooks/science-pipelines/: index.rst  science-pipelines-development.rst  science-pipelines-in-notebook.rst  science-pipelines-in-terminal.rst
docs/guides/notebooks/starting-and-stopping/: exit-a-notebook-session.rst  index.rst  start-a-notebook-session.rst
docs/guides/notebooks/tutorial-notebooks/: index.rst
docs/guides/portal/: index.rst
docs/guides/portal/starting-and-stopping/: index.rst
docs/guides/portal/using-the-portal/: index.rst  portal-tutorials.rst
docs/guides/recovery/: index.rst  user-recovery.primary.in.rst
docs/guides/resources/: index.rst  user-account-resources.primary.in.rst
docs/guides/times-square/: authoring-howto.rst  index.rst  parameter-types.rst
docs/guides/times-square/authoring/: authoring-howto.rst  dynamic-date-defaults.rst  example-sidecar.yaml  index.rst  notebook-requirements.rst  parameter-types.rst  schedule-runs.rst  sidecar-schema.rst
docs/guides/times-square/github-repos/: branch-protections-howto.rst  index.rst  installation-howto.rst  pre-commit-howto.rst  times-square-yaml-schema.rst
docs/guides/webdav/: index.rst
docs/support/: index.rst
docs/updates/: index.rst
requirements/: main.in  main.txt
scripts/: refresh_discovery_fixtures.py
src/rspdocs/: __init__.py  constants.py  pathlint.py  validate.py
src/rspdocs/discovery/: __init__.py  environments.json  metadata.py  models.py  service.py  switcher.py
src/rspdocs/phalanx/: __init__.py  models.py  service.py
src/rspdocs/sphinxext/: __init__.py  directives.py  logging.py  page_excludes.yaml  roles.py  services.py  tables.py
styles/RSP/: LinkText.yml  We.yml
styles/config/vocabularies/RSP/: accept.txt
tests/: null_test.py  test_pathlint.py  test_validate.py
tests/data/: phalanxenvs.json
tests/data/discovery/: base.json  idfdev.json  idfint.json  idfprod.json  summit.json  tucson-teststand.json  usdfdev.json  usdfprod.json
tests/discovery/: conftest.py  test_fallback.py  test_mapping.py  test_metadata.py  test_service.py  test_switcher.py
tests/phalanx/: service_test.py
tests/sphinxext/: conftest.py  test_directive.py  test_roles.py  test_services.py  test_tables.py
