[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "rspdocs"
description = "Utilities for the RSP documentation build."
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["rubin", "lsst"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "documenteer[guide]>=2.1,<3.0",
    "lsst-rsp==1.0.1",
    "pydantic",
    "httpx",
    "rubin-repertoire>=2.0",
    "Jinja2",
    "PyYAML",
    "sphinx-jinja",
    "Sphinx-Substitution-Extensions",
    "sphinxcontrib-youtube",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    # Testing
    "coverage[toml]",
    "pytest",
    "respx",
    "pre-commit",
    "mypy",
    "ruff",
]

[project.scripts]
rspdocs-validate-config = "rspdocs.validate:main"
rspdocs-lint-paths = "rspdocs.pathlint:main"

[project.urls]
Homepage = "https://rsp.lsst.io"
Source = "https://github.com/lsst/rsp_lsst_io"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
where = ["src"]
include = ["rspdocs*"]

[tool.setuptools.package-data]
# Ship the bundled data files (environments metadata shim, page-exclude map)
# with the package so they're available in isolated (wheel) builds.
rspdocs = ["discovery/environments.json", "sphinxext/page_excludes.yaml"]

[tool.coverage.run]
parallel = true
branch = true
source = ["rspdocs"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pydocstyle]
# Reference: http://www.pydocstyle.org/en/stable/error_codes.html
convention = "numpy"
add_select = [
    "D212", # Multi-line docstring summary should start at the first line
]
add-ignore = [
    "D105", # Missing docstring in magic method
    "D102", # Missing docstring in public method (needed for docstring inheritance)
    "D100", # Missing docstring in public module
    # Below are required to allow multi-line summaries.
    "D200", # One-line docstring should fit on one line with quotes
    "D205", # 1 blank line required between summary line and description
    "D400", # First line should end with a period
    # Properties shouldn't be written in imperative mode. This will be fixed
    # post 6.1.1, see https://github.com/PyCQA/pydocstyle/pull/546
    "D401",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
python_files = ["tests/*.py", "tests/*/*.py"]

[tool.ruff]
extend = "ruff-shared.toml"

[tool.ruff.lint]
# D100/D200/D205/D400/D401 mirror this repo's long-standing pydocstyle
# add-ignore above: multi-line summaries and non-imperative docstrings are
# an accepted style here, not a lint target for this migration.
extend-ignore = [
    "D100",
    "D200",
    "D205",
    "D400",
    "D401",
]

[tool.ruff.lint.isort]
known-first-party = ["rspdocs", "tests"]

[tool.ruff.lint.extend-per-file-ignores]
# conf.py is a Sphinx build-config module: print()/os.path/dynamic imports
# are its normal idiom, not something this migration should rewrite.
"conf.py" = ["T201", "PLC0415", "PTH118", "PTH119", "PTH110", "PTH122", "PTH207", "RUF005", "C901", "ANN001", "ANN201", "ANN202", "TD001", "FIX001", "D103"]
# One-off maintenance/CLI scripts print progress to stdout by design.
"scripts/*" = ["T201", "D103"]
"src/rspdocs/validate.py" = ["T201", "PLC0415"]
"src/rspdocs/pathlint.py" = ["T201"]
"src/rspdocs/discovery/service.py" = ["T201"]
"src/rspdocs/sphinxext/directives.py" = ["RUF012"]
"src/rspdocs/sphinxext/tables.py" = ["RUF012"]
"tests/discovery/test_metadata.py" = ["PT011"]
"tests/sphinxext/test_services.py" = ["PT018"]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
local_partial_types = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
